overlay/dev/web/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xyz-cheese
  namespace: xyz-cheese
