overlay/dev/web/external-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: cheese-web-svc
  namespace: xyz-cheese
  labels:
    env: dev
spec:
  selector:
    app: cheese-web
  ports:
    - port: 8080
      name: cheese-web
  type: ClusterIP
