overlay/dev/web/ing.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: xyz-cheese
  name: cheese-web-ing-class
  labels:
    env: dev
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheese-web-ingress
  namespace: xyz-cheese
  labels:
    expire: 2-28
#  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: cheese-web-ing-class
  #  tls:
  #    - hosts:
  #        - "cheese.apps.psawesome.xyz"
  #      secretName: secret-tls
  rules:
    - host: dev-cheese.expire-2-28.psawesome.xyz
      http:
        paths:
          - backend:
              service:
                name: cheese-web-svc
                port:
                  name: cheese-web
            pathType: Prefix
            path: /
